--- a/view/frontend/layout/webito_view_sample.xml
+++ b/view/frontend/layout/webito_view_sample.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" layout="1column">
     <body>
         <referenceContainer name="content">
-            <block name="webito_sample" template="Webito_FrontendDevelopmentTest::sample.phtml"/>
+            <block class="Magento\Framework\View\Element\Template" name="webito_sample" template="Webito_FrontendDevelopmentTest::sample.phtml"/>
         </referenceContainer>
     </body>
 </page>
